--- a/project/index.html
+++ b/project/index.html
@@ -15,9 +15,13 @@
     <meta property="og:image" content="https://www.filepicker.io/api/file/uJHoti8RQ0qGFIXSkmGd" />
 
     <link href="圖片路徑" rel="apple-touch-icon" />
+    <link rel="stylesheet" href="css/lightbox.min.css">
+    <link rel="stylesheet" href="css/swiper-bundle.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="https://www.hexschool.com/favicon.ico">
+
     <title>讓您奠定良好的前端基礎 | 六角學院</title>
+
 </head>
 <body>
     <div class="wrap">
@@ -41,43 +45,74 @@
         <div class="menu-part">
             <h1><a href="#" target="_blank" title="六角學院首頁">Hex School</a></h1>
             <ul class="menu">
-                <li><a href="#">首頁</a></li>
-                <li><a href="#">產品介紹</a></li>
-                <li><a href="#">聯絡我們</a></li>
+                <li>
+                    <a href="#">首頁</a>
+                </li>
+                <li>
+                    <a href="#" class="product-menu">產品介紹</a>
+                    <ul class="product">
+                        <li><a href="#">Html 5 基礎教學</a></li>
+                        <li><a href="#">響應式網站設計</a></li>
+                        <li><a href="#">jQuery 實戰教學</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">聯絡我們</a>
+                </li>
             </ul>
         </div>
-        <div class="banner">
-            <h2>六角學院<br>讓您奠定良好的前端基礎</h2>
+        
+        <!-- Slider main container -->
+        <div class="swiper-container">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+        <!-- Slides -->
+                <div class="swiper-slide banner"><h2>六角學院<br>讓您奠定良好的前端基礎</h2></div>
+                <div class="swiper-slide banner"><h2>六角學院<br>讓您奠定良好的前端基礎</h2></div>
+                <div class="swiper-slide banner"><h2>六角學院<br>讓您奠定良好的前端基礎</h2></div>
+            </div>
+        <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
         </div>
+
         <ul class="main">
             <li>
-                <div>
-                    <img src="images/html.png" alt="html5">
-                </div>
-                <h4>Html 5 基礎教學</h4>
-                <p>主流前端網站設計的基礎就在六角學院，在這裡不再是填鴨式教學，而是透過實際的範例，了解正確的網站開發流程，講師均具有業界開發經驗，讓學員學習業界主流的開發方法。</p>
+                <a class="example-image-link" href="images/html_lightbox.png" data-lightbox="example-set" data-title="Html5 基礎教學">
+                    <div>
+                        <img src="images/html.png" alt="html5">
+                    </div>
+                    <h4>Html 5 基礎教學</h4>
+                    <p>主流前端網站設計的基礎就在六角學院，在這裡不再是填鴨式教學，而是透過實際的範例，了解正確的網站開發流程，講師均具有業界開發經驗，讓學員學習業界主流的開發方法。</p>
+                </a>
             </li>
             <li>
-                <div>
-                    <img src="images/rwd.png" alt="rwd">
-                </div>
-                    <h4>響應式網站設計</h4>
-                <p>響應式網站設計（Responsive web design），目前大多數使用者均是以手機瀏覽的情況下，響應式網站已經是必備的。六角學院將會提供業界響應式開發方法，讓學生了解行動版開發技巧。</p>
+                <a class="example-image-link" href="images/rwd_lightbox.png" data-lightbox="example-set" data-title="響應式網站設計">
+                    <div>
+                        <img src="images/rwd.png" alt="rwd">
+                    </div>
+                        <h4>響應式網站設計</h4>
+                    <p>響應式網站設計（Responsive web design），目前大多數使用者均是以手機瀏覽的情況下，響應式網站已經是必備的。六角學院將會提供業界響應式開發方法，讓學生了解行動版開發技巧。</p>
+                </a>
             </li>
             <li>
-                <div>
-                    <img src="images/jquery.png" alt="jQuery">
-                </div>
-                <h4>jQuery 實戰教學</h4>
-                <p>
-                    本課程有以下特色
-                </p>
-                <ul class="list">
-                    <li>了解變數的使用方法</li>
-                    <li>學習並操作DOM</li>
-                    <li>學習基本數學運算方法</li>
-                    <li>套件的操作及應用</li>
-                </ul>
+                <a class="example-image-link" href="images/jquery_lightbox.png" data-lightbox="example-set" data-title="jQuery 實戰教學">
+                    <div>
+                        <img src="images/jquery.png" alt="jQuery">
+                    </div>
+                    <h4>jQuery 實戰教學</h4>
+                    <p>
+                        本課程有以下特色
+                    </p>
+                    <ul class="list">
+                        <li>了解變數的使用方法</li>
+                        <li>學習並操作DOM</li>
+                        <li>學習基本數學運算方法</li>
+                        <li>套件的操作及應用</li>
+                    </ul>
+                </a>
             </li>
         </ul>
         <div class="chart">
@@ -159,6 +194,13 @@
                 <p>電話：<a href="tel:+886-999123456" title="撥打電話">0999-123-456</a></p>
             </div>
         </div>
+        <div class="top-box"><a href="#" class="to-top"></a></div>
     </div>
+
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/lightbox.min.js"></script>
+    <script src="js/swiper-bundle.js"></script>
+    <script src="js/all.js"></script>
+
 </body>
 </html>
