--- a/project/index.html
+++ b/project/index.html
@@ -167,20 +167,18 @@
             <form action="#">
                 <textarea name="textarea" id="" rows="14" placeholder="我想說…"></textarea>
                 <div class="info">
-                    <ul>
-                        <li>
-                            <label for="name">姓名</label>
-                            <input type="text" name="name" id="name" class="words" placeholder="請輸入姓名">
-                        </li>
-                        <li>
-                            <label for="telephone">電話</label>
-                            <input type="tel" name="telephone" id="telephone" class="words" placeholder="請輸入連絡電話">
-                        </li>
-                        <li>
-                            <label for="email">信箱</label>
-                            <input type="email" name="email" id="email" class="words" placeholder="請輸入電子信箱">
-                        </li>
-                    </ul>
+                    <div class="form-group">
+                        <label for="name">姓名</label>
+                        <input type="text" name="name" id="name" class="words" placeholder="請輸入姓名">
+                    </div>
+                    <div class="form-group">
+                        <label for="telephone">電話</label>
+                        <input type="tel" name="telephone" id="telephone" class="words" placeholder="請輸入連絡電話">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">信箱</label>
+                        <input type="email" name="email" id="email" class="words" placeholder="請輸入電子信箱">
+                    </div>
                     <div class="button">
                         <input type="submit" value="送出">
                     </div>
@@ -189,10 +187,10 @@
         </div>
         <div class="footer">
             <a href="#" target="_blank" title="六角學院"><img src="images/footerLogo.png" alt="hexschool logo"></a>
-            <div class="bottom">
-                <p>聯絡我們：<a href="mailto:hexschool@gmail.com" title="透過電子信箱聯絡我們">hexschool@gmail.com</a></p>
-                <p>電話：<a href="tel:+886-999123456" title="撥打電話">0999-123-456</a></p>
-            </div>
+            <ul class="contact">
+                <li><p>聯絡我們：<a href="mailto:hexschool@gmail.com" title="透過電子信箱聯絡我們">hexschool@gmail.com</a></p></li>
+                <li><p>電話：<a href="tel:+886-999123456" title="撥打電話">0999-123-456</a></p></li>
+            </ul>
         </div>
         <div class="top-box"><a href="#" class="to-top"></a></div>
     </div>
