--- a/project/index.html
+++ b/project/index.html
@@ -5,119 +5,96 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <meta name="keywords" content="六角學院,前端,六角,學習前端,前端課程">
-    <meta name='description' content='為您打造就算沒有程式基礎，也能夠逐步學習獲得網頁排版技巧的紮實觀念，六角學院的講師將協助您成就更好的自己！' />
+    <meta name="author" content="Jo Yun, 若昀">
 
-    <meta property="og:title" content="讓您奠定良好的前端基礎" />
-    <meta property="og:description" content="為您打造就算沒有程式基礎，也能夠逐步學習獲得網頁排版技巧的紮實觀念，六角學院的講師將協助您成就更好的自己！">
+    <link rel="shortcut icon" href="https://www.hexschool.com/favicon.ico">
+    <meta name='description' content='六角學院為您一行行檢視程式碼，火熱學習前端技術，用熱心、耐心、同理心陪伴您學習，再困難的挑戰也不怕。只要您有心，我們就在這裡跟您一起一路向前進。' />
+    <meta name='keywords' content='前端課程, 六角學院, 前端, 前端技術, 六角, html, jquery, rwd, 響應式網站, 課程, 線上課程' />
+
+    <meta property="og:title" content="六角學院-讓您奠定良好的前端基礎" />
+    <meta property="og:description" content="六角學院為您一行行檢視程式碼，火熱學習前端技術。" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="FB上的網址" />
+    <meta property="og:url" content="index.html" />
     <meta property="og:image" content="https://www.filepicker.io/api/file/uJHoti8RQ0qGFIXSkmGd" />
 
-    <link href="圖片路徑" rel="apple-touch-icon" />
-    <link rel="stylesheet" href="css/lightbox.min.css">
-    <link rel="stylesheet" href="css/swiper-bundle.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="https://www.hexschool.com/favicon.ico">
+    <meta name="twitter:url" content="index.html">
+    <meta name="twitter:title" content="六角學院-讓您奠定良好的前端基礎">
+    <meta name="twitter:description" content="六角學院為您一行行檢視程式碼，火熱學習前端技術。">
+    <meta name="twitter:image" content="https://www.filepicker.io/api/file/uJHoti8RQ0qGFIXSkmGd">
 
+    <link rel="stylesheet" href="scss/style.css">
     <title>讓您奠定良好的前端基礎 | 六角學院</title>
-
 </head>
 <body>
     <div class="wrap">
-        <ul class="social-media">
-            <li>
-                <a href="#" target="_blank" title="facebook">
-                    <img src="images/facebookIcon.png" alt="facebook icon">
-                    <p class="facebook">粉絲團</p>
-                </a>
+        <ul class="media p-row">
+            <li class="media-fb">
+                <a href="#" target="_blank" title="臉書粉絲團"><img src="images/facebookIcon.png" alt="facebook icon">粉絲團</a>
             </li>
-            <li>
-                <div class="line"></div>
-            </li>
-            <li>
-                <a href="#" target="_blank" title="twitter">
-                    <img src="images/twitterIcon.png" alt="twitter icon">
-                    <p class="twitter">追蹤我們</p>
-                </a>
+            <li class="media-twi">
+                <a href="#" target="blank" title="追蹤六角推特"><img src="images/twitterIcon.png" alt="twitter icon">追蹤我們</a>
             </li>
         </ul>
-        <div class="menu-part">
-            <h1><a href="#" target="_blank" title="六角學院首頁">Hex School</a></h1>
+        <div class="nav p-row">
+            <h2><a href="#" title="回到首頁">六角學院</a></h2>
             <ul class="menu">
                 <li>
                     <a href="#">首頁</a>
                 </li>
                 <li>
-                    <a href="#" class="product-menu">產品介紹</a>
-                    <ul class="product">
-                        <li><a href="#">Html 5 基礎教學</a></li>
-                        <li><a href="#">響應式網站設計</a></li>
-                        <li><a href="#">jQuery 實戰教學</a></li>
+                    <a href="#">產品介紹</a>
+                    <ul class="submenu">
+                        <li><a href="#">html</a></li>
+                        <li><a href="#">RWD</a></li>
+                        <li><a href="#">jQuery</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">聯絡我們</a>
+                    <a href="#contact">聯絡我們</a>
                 </li>
             </ul>
         </div>
-        
-        <!-- Slider main container -->
-        <div class="swiper-container">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-        <!-- Slides -->
-                <div class="swiper-slide banner"><h2>六角學院<br>讓您奠定良好的前端基礎</h2></div>
-                <div class="swiper-slide banner"><h2>六角學院<br>讓您奠定良好的前端基礎</h2></div>
-                <div class="swiper-slide banner"><h2>六角學院<br>讓您奠定良好的前端基礎</h2></div>
-            </div>
-        <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+        <div class="banner">
+            <h1 class="p-row p-col">六角學院<br>讓您奠定良好的前端基礎</h1>
         </div>
-
-        <ul class="main">
-            <li>
-                <a class="example-image-link" href="images/html_lightbox.png" data-lightbox="example-set" data-title="Html5 基礎教學">
-                    <div>
-                        <img src="images/html.png" alt="html5">
+        <ul class="cards p-row">
+            <li class="card mr-35">
+                <a href="#">
+                    <div class="card-img">
+                        <img src="images/html.png" alt="html">
                     </div>
-                    <h4>Html 5 基礎教學</h4>
-                    <p>主流前端網站設計的基礎就在六角學院，在這裡不再是填鴨式教學，而是透過實際的範例，了解正確的網站開發流程，講師均具有業界開發經驗，讓學員學習業界主流的開發方法。</p>
                 </a>
+                <h3>Html 5 基礎教學</h3>
+                <p>主流前端網站設計的基礎就在六角學院，在這裡不再是填鴨式教學，而是透過實際的範例，了解正確的網站開發流程，講師均具有業界開發經驗，讓學員學習業界主流的開發方法。</p>
             </li>
-            <li>
-                <a class="example-image-link" href="images/rwd_lightbox.png" data-lightbox="example-set" data-title="響應式網站設計">
-                    <div>
-                        <img src="images/rwd.png" alt="rwd">
+            <li class="card mr-35">
+                <a href="#">
+                    <div class="card-img">
+                        <img src="images/rwd.png" alt="RWD">
                     </div>
-                        <h4>響應式網站設計</h4>
-                    <p>響應式網站設計（Responsive web design），目前大多數使用者均是以手機瀏覽的情況下，響應式網站已經是必備的。六角學院將會提供業界響應式開發方法，讓學生了解行動版開發技巧。</p>
                 </a>
+                <h3>響應式網站設計</h3>
+                <p>響應式網站設計（Responsive web design），目前大多數使用者均是以手機瀏覽的情況下，響應式網站已經是必備的。六角學院將會提供業界響應式開發方法，讓學生了解行動版開發技巧。</p>
             </li>
-            <li>
-                <a class="example-image-link" href="images/jquery_lightbox.png" data-lightbox="example-set" data-title="jQuery 實戰教學">
-                    <div>
+            <li class="card">
+                <a href="#">
+                    <div class="card-img">
                         <img src="images/jquery.png" alt="jQuery">
                     </div>
-                    <h4>jQuery 實戰教學</h4>
-                    <p>
-                        本課程有以下特色
-                    </p>
-                    <ul class="list">
-                        <li>了解變數的使用方法</li>
-                        <li>學習並操作DOM</li>
-                        <li>學習基本數學運算方法</li>
-                        <li>套件的操作及應用</li>
-                    </ul>
                 </a>
+                <h3>jQuery 實戰教學</h3>
+                <p>本課程有以下特色</p>
+                <ul class="card-list">
+                    <li>了解變數的使用方法</li>
+                    <li>學習並操作DOM</li>
+                    <li>學習基本數學運算方法</li>
+                    <li>套件的操作及應用</li>
+                </ul>
             </li>
         </ul>
-        <div class="chart">
-            <h3>線上及實體課程的差異</h3>
-            <table>
+        <div class="compare">
+            <h2 class="l-title">線上及實體課程的差異</h2>
+            <table class="compare-table">
                 <tr>
                     <th>項目</th>
                     <th>Hex School 線上課程</th>
@@ -162,42 +139,37 @@
                 </tr>
             </table>
         </div>
-        <div class="sheet">
-            <h3>對我們的課程有興趣嗎？<br>歡迎留下您的資料</h3>
-            <form action="#">
-                <textarea name="textarea" id="" rows="14" placeholder="我想說…"></textarea>
-                <div class="info">
-                    <div class="form-group">
-                        <label for="name">姓名</label>
-                        <input type="text" name="name" id="name" class="words" placeholder="請輸入姓名">
-                    </div>
-                    <div class="form-group">
-                        <label for="telephone">電話</label>
-                        <input type="tel" name="telephone" id="telephone" class="words" placeholder="請輸入連絡電話">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">信箱</label>
-                        <input type="email" name="email" id="email" class="words" placeholder="請輸入電子信箱">
-                    </div>
-                    <div class="button">
-                        <input type="submit" value="送出">
-                    </div>
+        <div class="interest p-row p-col">
+            <h2 class="l-title">對我們的課程有興趣嗎？<br>歡迎留下您的資料</h2>
+            <form action="index.html">
+                <textarea name="interest-message" id="interest-message" rows="14" placeholder="我想說..." required></textarea>
+                <div class="interest-form">
+                    <label for="interest-name">姓名</label>
+                    <input type="text" name="interest-name" id="interest-name" placeholder="您的姓名" required>
+                    <label for="interest-tel">電話</label>
+                    <input type="tel" name="interest-tel" id="interest-tel" placeholder="您的電話" pattern="[0-9]{6,13}" required>
+                    <label for="interest-email">信箱</label>
+                    <input type="email" name="interest-email" id="interest-email" placeholder="您的電子信箱" required>
+                    <input type="submit" value="送出" class="interest-form-submit">
+                    <div class="clearfix"></div>
                 </div>
             </form>
         </div>
         <div class="footer">
-            <a href="#" target="_blank" title="六角學院"><img src="images/footerLogo.png" alt="hexschool logo"></a>
-            <ul class="contact">
-                <li><p>聯絡我們：<a href="mailto:hexschool@gmail.com" title="透過電子信箱聯絡我們">hexschool@gmail.com</a></p></li>
-                <li><p>電話：<a href="tel:+886-999123456" title="撥打電話">0999-123-456</a></p></li>
+            <a href="#" title="回到首頁"><img src="images/footerLogo.png" alt="六角學院logo"></a>
+            <ul class="footer-contact" id="contact">
+                <li>
+                    <p>聯絡我們：<a href="mailto:hexschool@gmail.com" title="用電子信箱聯絡我們">hexschool@gmail.com</a></p>
+                </li>
+                <li>
+                    <p>電話：<a href="tel:+886-999123456" title="撥打電話讓專人為您服務">0999-123-456</a></p>
+                </li>
             </ul>
         </div>
-        <div class="top-box"><a href="#" class="to-top"></a></div>
+        <div class="to-top"><a href="#" class="to-top"></a></div>
     </div>
 
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/lightbox.min.js"></script>
-    <script src="js/swiper-bundle.js"></script>
     <script src="js/all.js"></script>
 
 </body>
